Implement ActivePort API
Implement ActivePort API
